--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@cresc/core",
   "version": "1.0.0",
   "description": "react-native hot update",
-  "main": "lib/index.js",
+  "react-native": "src/index.ts",
+  "main": "src/index.web.js",
   "scripts": {
     "submodule": "git submodule update --init --recursive",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,15 +25,19 @@
     "url": "https://github.com/cresc-dev/cresc/issues"
   },
   "peerDependencies": {
-    "react-native": ">=0.68.0"
+    "react-native": ">=0.57.0"
   },
   "homepage": "https://github.com/cresc-dev/cresc#readme",
   "dependencies": {
     "nanoid": "^3.3.3"
   },
   "devDependencies": {
+    "@react-native/eslint-config": "^0.73.2",
     "@types/react": "^18.2.46",
+    "eslint": "^8.56.0",
+    "prettier": "^2",
     "react": "18.2.0",
-    "react-native": "0.73"
+    "react-native": "0.73",
+    "typescript": "^5.3.3"
   }
 }
