--- a/example/rn73/package.json
+++ b/example/rn73/package.json
@@ -7,9 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
+    "apk": "cd android && ./gradlew assembleRelease",
     "test": "jest"
   },
   "dependencies": {
+    "@cresc/core": "^1.1.0",
     "react": "18.2.0",
     "react-native": "0.73.2"
   },
